--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -150,7 +150,8 @@
           filter: drop-shadow(0 0 7px rgba(255, 255, 255, 0.15));
 }
 
-.jumbotron-home h1, .jumbotron-home h2 {
+.jumbotron-home h1,
+.jumbotron-home h2 {
   font-weight: bold;
   color: #fff;
 }
@@ -230,12 +231,6 @@
   right: 0 /*rtl:ignore*/;
 }
 
-#markdown-toc ul {
-  padding-left: 2rem;
-  margin-top: .25rem;
-  margin-bottom: .25rem;
-}
-
 .cf-sidebar {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -275,6 +270,12 @@
   font-size: .9375rem;
 }
 
+#markdown-toc ul {
+  padding-left: 2rem;
+  margin-top: .25rem;
+  margin-bottom: .25rem;
+}
+
 @media (min-width: 75em) {
   #contents,
   #markdown-toc {
@@ -305,8 +306,8 @@
     position: sticky;
     top: 4.375rem;
     max-height: calc(100vh - 4.375rem);
-    overflow-y: auto;
     overflow-x: visible;
+    overflow-y: auto;
   }
 }
 
@@ -390,8 +391,8 @@ h4 > code {
 
 .cf-example + .cf-clipboard + .highlight {
   border-top: 0;
-  border-top-right-radius: 0;
   border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 @media (min-width: 36em) {
@@ -476,7 +477,10 @@ h4 > code {
   border-radius: 0.25rem;
 }
 
-.cf-callout .h3, .cf-callout .h4, .cf-callout .h5, .cf-callout .h6 {
+.cf-callout .h3,
+.cf-callout .h4,
+.cf-callout .h5,
+.cf-callout .h6 {
   margin-top: 0;
   margin-bottom: .5rem;
   font-size: 1.25rem;
@@ -496,7 +500,10 @@ h4 > code {
   border-color: #718ed6;
 }
 
-.cf-callout-primary .h3, .cf-callout-primary .h4, .cf-callout-primary .h5, .cf-callout-primary .h6 {
+.cf-callout-primary .h3,
+.cf-callout-primary .h4,
+.cf-callout-primary .h5,
+.cf-callout-primary .h6 {
   color: #0f389e;
 }
 
@@ -505,7 +512,10 @@ h4 > code {
   border-color: #acacac;
 }
 
-.cf-callout-secondary .h3, .cf-callout-secondary .h4, .cf-callout-secondary .h5, .cf-callout-secondary .h6 {
+.cf-callout-secondary .h3,
+.cf-callout-secondary .h4,
+.cf-callout-secondary .h5,
+.cf-callout-secondary .h6 {
   color: #636363;
 }
 
@@ -514,7 +524,10 @@ h4 > code {
   border-color: #70b0d6;
 }
 
-.cf-callout-info .h3, .cf-callout-info .h4, .cf-callout-info .h5, .cf-callout-info .h6 {
+.cf-callout-info .h3,
+.cf-callout-info .h4,
+.cf-callout-info .h5,
+.cf-callout-info .h6 {
   color: #0e699e;
 }
 
@@ -523,7 +536,10 @@ h4 > code {
   border-color: #70b874;
 }
 
-.cf-callout-success .h3, .cf-callout-success .h4, .cf-callout-success .h5, .cf-callout-success .h6 {
+.cf-callout-success .h3,
+.cf-callout-success .h4,
+.cf-callout-success .h5,
+.cf-callout-success .h6 {
   color: #0e7414;
 }
 
@@ -532,7 +548,10 @@ h4 > code {
   border-color: #dfb866;
 }
 
-.cf-callout-warning .h3, .cf-callout-warning .h4, .cf-callout-warning .h5, .cf-callout-warning .h6 {
+.cf-callout-warning .h3,
+.cf-callout-warning .h4,
+.cf-callout-warning .h5,
+.cf-callout-warning .h6 {
   color: #ab7400;
 }
 
@@ -541,7 +560,10 @@ h4 > code {
   border-color: #de776e;
 }
 
-.cf-callout-danger .h3, .cf-callout-danger .h4, .cf-callout-danger .h5, .cf-callout-danger .h6 {
+.cf-callout-danger .h3,
+.cf-callout-danger .h4,
+.cf-callout-danger .h5,
+.cf-callout-danger .h6 {
   color: #aa190c;
 }
 
@@ -1003,9 +1025,44 @@ h4 > code {
   }
 }
 
+.btn .example-caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  vertical-align: middle;
+  content: "";
+  border-top: 0.5rem solid transparent;
+  border-right: 0.5rem solid  #000;
+  border-bottom: 0.5rem solid transparent;
+  border-left: 0;
+}
+
+.btn:focus .example-caret, .btn:hover .example-caret {
+  border-top: 0.5rem solid transparent;
+  border-right: 0;
+  border-bottom: 0.5rem solid transparent;
+  border-left: 0.5rem solid  #000;
+}
+
 .cf-example > .form-control + .form-control,
 .cf-example > .custom-select + .custom-select {
   margin-top: .5rem;
+}
+
+.custom-file-control:lang(en):empty::after {
+  content: "Choose file...";
+}
+
+.custom-file-control:lang(es):empty::after {
+  content: "Seleccionar archivo...";
+}
+
+.custom-file-control:lang(en):empty::after {
+  content: "Choose file...";
+}
+
+.custom-file-control:lang(es):empty::after {
+  content: "Seleccionar archivo...";
 }
 
 .cf-example > .btn-group + .btn-group,
@@ -1629,8 +1686,8 @@ h4 > code {
 .player-fulldisplay .player-transcript {
   position: absolute;
   top: 0;
-  left: auto;
   right: 0;
+  left: auto;
   width: 25%;
   height: 80%;
 }
@@ -1660,10 +1717,10 @@ h4 > code {
   text-align: center;
 }
 
-.player-time-remainder:before {
+.player-time-remainder::before {
   display: inline-block;
-  content: "-";
   line-height: inherit;
+  content: "-";
 }
 
 .player-seek {
@@ -1759,35 +1816,27 @@ h4 > code {
   max-width: 100% !important;
   height: 100% !important;
   max-height: 100%;
-  margin: 0;
   padding: 0;
-  background: #000000;
+  margin: 0;
+  background: #000;
 }
 
 .player-fulldisplay .player-wrapper {
   position: absolute;
-  left: 0;
-  bottom: 20px;
   right: 0;
+  bottom: 20px;
+  left: 0;
   margin-top: 0;
   text-align: center;
 }
 
-/*
-.player-fulldisplay video {
-    width: 100% !important;
-    max-width: 100%;
-    height: 100% !important;
-    max-height: 100%;
-}
-*/
 .player-fulldisplay .player {
   display: inline-block;
-  background-color: #fff;
-  color: #222;
-  border-radius: 5px;
   padding: 5px;
   margin: 0;
+  color: #222;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
 .player-caption-wrapper {
@@ -1823,18 +1872,18 @@ h4 > code {
   position: absolute;
   top: 50%;
   left: 5px;
-  margin-top: -0.7em;
+  margin-top: -.7em;
   color: #5cb85c;
 }
 
-.player-script-scroll-check .player-script-scroll-check-icon:before {
+.player-script-scroll-check .player-script-scroll-check-icon::before {
   display: block;
-  font-family: 'FontAwesome';
+  font-family: FontAwesome;
   color: #d9534f;
   content: "\f00d";
 }
 
-.player-script-scroll-check.active .player-script-scroll-check-icon:before {
+.player-script-scroll-check.active .player-script-scroll-check-icon::before {
   color: #5cb85c;
   content: "\f00c";
 }
@@ -1846,13 +1895,13 @@ h4 > code {
 .player-fulldisplay.player-inactive .player {
   visibility: hidden;
   opacity: 0;
-  transition: visibility 1.0s, opacity 1.0s;
+  transition: visibility 1s, opacity 1s;
 }
 
 .player-fulldisplay.player-inactive.player-paused .player {
   visibility: visible;
   opacity: 1;
-  transition: all 0.1s;
+  transition: all .15s;
 }
 
 .player-notime .player-time-current,
@@ -1879,21 +1928,16 @@ h4 > code {
 }
 
 .player-transcript-active {
-  background-color: #FF6;
+  background-color: #ff6;
 }
 
 .player-transcript-seekpoint:hover {
-  background: #CF6;
   cursor: pointer;
+  background: #cf6;
 }
 
 .player-scriptshow .player-transcript {
   display: block;
-}
-
-.player-scriptshow:-moz-full-screen video {
-  width: 74% !important;
-  height: auto !important;
 }
 
 .player-scriptshow:-webkit-full-screen video {
@@ -1901,8 +1945,12 @@ h4 > code {
   height: auto !important;
 }
 
+.player-scriptshow:-moz-full-screen video {
+  width: 74% !important;
+  height: auto !important;
+}
+
 .player-scriptshow:-ms-fullscreen video {
-  position: -ms-device-fixed !important;
   width: 74% !important;
   height: auto !important;
 }
@@ -1917,43 +1965,41 @@ h4 > code {
 }
 
 .player-unstarted .embed-fluid::after {
-  display: inline-block;
   position: absolute;
   top: 50%;
   left: 50%;
+  display: inline-block;
   width: 70px;
   height: 70px;
+  padding: 2px 7px 3px;
   margin-top: -35px;
   margin-left: -35px;
-  padding: 2px 7px 3px;
-  font-family: 'FontAwesome';
+  font-family: FontAwesome;
   font-size: 66px;
   line-height: 1;
   color: #fff;
+  pointer-events: none;
   content: "\f144";
   background-color: #000;
-  border-radius: 50% 50%;
-  filter: alpha(opacity=75);
-  opacity: 0.75;
-  pointer-events: none;
+  border-radius: 50%;
+  opacity: .75;
 }
 
 .player-unstarted .embed-fluid:hover::after {
-  filter: alpha(opacity=100);
   opacity: 1;
 }
 
 .player-description {
-  background-color: #fff;
-  border: 1px solid #e3e3e3;
   padding: .5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  background-color: #fff;
+  border: 1px solid #e3e3e3;
 }
 
 .player-description-seekpoint:hover {
-  background: #CF6;
   cursor: pointer;
+  background: #cf6;
 }
 
 .player-describe {
@@ -1985,11 +2031,11 @@ h4 > code {
   bottom: 1rem;
   left: 50%;
   display: block;
-  padding: .25rem;
   max-width: 100%;
+  padding: .25rem;
   font-size: .9375rem;
-  text-align: center;
   color: #fff;
+  text-align: center;
   background-color: rgba(0, 0, 0, 0.65);
   border-radius: .25rem;
   -webkit-transform: translateX(-50%);
