--- a/components/grid-lines/index.html
+++ b/components/grid-lines/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -417,7 +419,7 @@
 
 <p>To get consitent spacing, some elements might require utility classes or custom styles.  <code class="highlighter-rouge">.gridline-item</code> containers can be mixed with the grid system to create the layout.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="gridline gridline-vr gridline-hr">
     <div class="gridline-item col-md-6">
         <h4>Header Level 4</h4>
@@ -486,7 +488,7 @@
 
 <h3 id="single-column">Single Column</h3>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Horizontal</strong>
 <div class="gridline gridline-hr">
     <div class="gridline-item col-md-12">
@@ -523,7 +525,7 @@
 
 <h3 id="double-column">Double Column</h3>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Vertical</strong>
 <div class="gridline gridline-md-vr">
     <div class="gridline-item col-md-6">
@@ -544,7 +546,7 @@
     <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Horizontal</strong>
 <div class="gridline gridline-hr">
     <div class="gridline-item col-md-6">
@@ -597,7 +599,7 @@
     <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Both</strong>
 <div class="gridline gridline-hr gridline-md-vr">
     <div class="gridline-item col-md-6">
@@ -652,7 +654,7 @@
 
 <h3 id="triple-column">Triple Column</h3>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Vertical</strong>
 <div class="gridline gridline-md-vr">
     <div class="gridline-item col-md-4">
@@ -679,7 +681,7 @@
     <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Horizontal</strong>
 <div class="gridline gridline-hr">
     <div class="gridline-item col-md-4">
@@ -750,7 +752,7 @@
     <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <strong>Rule: Both</strong>
 <div class="gridline gridline-hr gridline-md-vr">
     <div class="gridline-item col-md-4">
@@ -823,7 +825,7 @@
 
 <h3 id="bordered-1">Bordered</h3>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="gridline-bordered">
     <div class="gridline gridline-hr gridline-md-vr">
         <div class="gridline-item col-md-4">
@@ -907,7 +909,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -916,7 +918,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -932,7 +934,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -942,7 +944,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
