--- a/components/list-group/index.html
+++ b/components/list-group/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -407,7 +409,7 @@
 <h2 id="basic-example">Basic Example</h2>
 <p>The most basic list group is an unordered list with list items, and the proper classes. Build upon it with the options that follow, or with your own CSS as needed.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <ul class="list-group">
   <li class="list-group-item">Cras justo odio</li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -428,7 +430,7 @@
 
 <p>Add <code class="highlighter-rouge">.active</code> to a <code class="highlighter-rouge">.list-group-item</code> to indicate the current active selection.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <ul class="list-group">
   <li class="list-group-item active">
     Cras justo odio
@@ -459,7 +461,7 @@
 <p>Please refer to the <a href="/get-started/accessibility/#disabled-anchors">Accessiblity notes about disabled anchors</a>.</p>
 </div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <ul class="list-group">
   <li class="list-group-item disabled">
     Cras justo odio
@@ -486,7 +488,7 @@
 
 <p>Be sure to <strong>not use the standard <code class="highlighter-rouge">.btn</code> classes here</strong>.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action active">
     Cras justo odio
@@ -509,7 +511,7 @@
 
 <p>With <code class="highlighter-rouge">&lt;button&gt;</code>s, you can also make use of the <code class="highlighter-rouge">disabled</code> attribute instead of the <code class="highlighter-rouge">.disabled</code> class. Sadly, <code class="highlighter-rouge">&lt;a&gt;</code>s don’t support the disabled attribute.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="list-group">
   <button type="button" class="list-group-item list-group-item-action active">
     Cras justo odio
@@ -540,7 +542,7 @@
 <p>Please refer to the <a href="/get-started/accessibility/#conveying-meaning-with-color">Accessiblity notes about conveying meaning with color</a>.</p>
 </div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <ul class="list-group">
   <li class="list-group-item">Cras justo odio</li>
   <li class="list-group-item list-group-item-success">Dapibus ac facilisis in</li>
@@ -559,7 +561,7 @@
 
 <p>Contextual classes also work with <code class="highlighter-rouge">.list-group-item-action</code>. Note the addition of the hover styles here not present in the previous example. Also supported is the <code class="highlighter-rouge">.active</code> state; apply it to indicate an active selection on a contextual list group item.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action">Cras justo odio</a>
   <a href="#" class="list-group-item list-group-item-action list-group-item-success">Dapibus ac facilisis in</a>
@@ -580,7 +582,7 @@
 
 <p>Add badges to any list group item to show unread counts, activity, and more with the help of some <a href="/utilities/flexbox/">flexbox utility classes</a>.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <ul class="list-group">
   <li class="list-group-item d-flex flex-between flex-items-center">
     Cras justo odio
@@ -615,7 +617,7 @@
 
 <p>Add nearly any HTML within, even for linked list groups like the one below, using <a href="/utilities/flexbox/">flexbox utilities</a> for layout.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action flex-column flex-start active">
     <div class="d-flex w-100 flex-between">
@@ -682,7 +684,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -691,7 +693,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -707,7 +709,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -717,7 +719,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
