--- a/components/media-object/index.html
+++ b/components/media-object/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -407,7 +409,7 @@
 
 <p>Below is an example of a single media object. Only two classes are required—the wrapping <code class="highlighter-rouge">.media</code> and the <code class="highlighter-rouge">.media-body</code> around your content. Optional padding and margin can be controlled through <a href="/utilities/spacing/">spacing utilities</a>.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -427,7 +429,7 @@
 <div class="cf-callout cf-callout-warning">
 <p class="h5">Flexbug #12: Inline elements aren’t treated as flex items</p>
 
-<p>Internet Explorer 10-11 do not render inline elements like links or images (or <code class="highlighter-rouge">::before</code> and <code class="highlighter-rouge">::after</code> pseudo-elements) as flex items. The only workaround is to set a non-inline <code class="highlighter-rouge">display</code> value (e.g., <code class="highlighter-rouge">block</code>, <code class="highlighter-rouge">inline-block</code>, or <code class="highlighter-rouge">flex</code>). You can also use one of our <a href="/utilities/display-property/">display utilities</a>, such as <code class="highlighter-rouge">.d-flex</code>, for an easy fix.</p>
+<p>Internet Explorer 10-11 do not render inline elements like links or images (or <code class="highlighter-rouge">::before</code> and <code class="highlighter-rouge">::after</code> pseudo-elements) as flex items. The only workaround is to set a non-inline <code class="highlighter-rouge">display</code> value (e.g., <code class="highlighter-rouge">block</code>, <code class="highlighter-rouge">inline-block</code>, or <code class="highlighter-rouge">flex</code>). You can also use one of our <a href="/utilities/display/">display utilities</a>, such as <code class="highlighter-rouge">.d-flex</code>, for an easy fix.</p>
 
 <p><strong>Source:</strong> <a href="https://github.com/philipwalton/flexbugs#12-inline-elements-are-not-treated-as-flex-items">Flexbugs on GitHub</a></p>
 </div>
@@ -436,7 +438,7 @@
 
 <p>Media components can also be nested as many times as needed. Place nested <code class="highlighter-rouge">.media</code> within the <code class="highlighter-rouge">.media-body</code> of a parent media object.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -475,7 +477,7 @@
 
 <p>Media in a media object can be aligned with <a href="/utilities/flexbox/">flexbox utilities</a> to the top (default), middle, or end of your <code class="highlighter-rouge">.media-body</code> content.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -494,7 +496,7 @@
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="flex-self-center me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -513,7 +515,7 @@
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="flex-self-end me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -536,7 +538,7 @@
 
 <p>Change the order of content in media objects by modifying the HTML itself, or by adding some custom flexbox CSS to set the <code class="highlighter-rouge">order</code> property (to an integer of your choosing).</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <div class="media-body">
     <h5>Media heading</h5>
@@ -557,7 +559,7 @@
 
 <p>Because the media object has so few structural requirements, you can also use these classes on list HTML elements. On your <code class="highlighter-rouge">&lt;ul&gt;</code> or <code class="highlighter-rouge">&lt;ol&gt;</code>, add the <code class="highlighter-rouge">.list-unstyled</code> to remove any browser default list styles, and then apply <code class="highlighter-rouge">.media</code> to your <code class="highlighter-rouge">&lt;li&gt;</code>s. As always, use spacing utilities wherever needed to fine tune.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <ul class="list-unstyled">
   <li class="media">
     <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
@@ -610,7 +612,7 @@
 
 <p>You can include many other components, such as forms, buttons, and more.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -653,7 +655,7 @@
 
 <p>Put media items on the both sides.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -674,7 +676,7 @@
 
 <p>Even create your own social media layout.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="media">
   <img class="me-1" data-src="holder.js/64x64" alt="Generic placeholder image" />
   <div class="media-body">
@@ -763,7 +765,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -772,7 +774,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -788,7 +790,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -798,7 +800,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
