--- a/components/navbar/index.html
+++ b/components/navbar/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -542,7 +544,7 @@
 
 <p>Be default, navbars start out collapsed, but when the target breakpoint is reached, the navbar will expand into a horizontal row of elements.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR0">
@@ -595,7 +597,7 @@
 
 <p>With the <code class="highlighter-rouge">.navbar-brand</code> in the collapsing area.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded">
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarR1">
     <span aria-hidden="true">&#8801;</span>
@@ -661,7 +663,7 @@
 
 <p>Here’s an example of some sub-components included in a default, light navbar:</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar0">
@@ -736,7 +738,7 @@
 
 <p>Adding images to the <code class="highlighter-rouge">.navbar-brand</code> will likely always require custom styles or utilities to properly size. Here are some examples to demonstrate.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <!-- Just an image -->
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">
@@ -751,7 +753,7 @@
   <span class="nt">&lt;/a&gt;</span>
 <span class="nt">&lt;/nav&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <!-- Image and text -->
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">
@@ -774,7 +776,7 @@
 
 <p>Add <code class="highlighter-rouge">.active</code> directly to a <code class="highlighter-rouge">.nav-link</code>, to indicate a certain state, such as the current page.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
   <div class="navbar-brand">Navbar</div>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1">
@@ -825,7 +827,7 @@
 
 <p>And because we use classes for our navs, you can avoid the list-based approach entirely if you like.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
  <div class="navbar-brand">Navbar</div>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar2">
@@ -864,7 +866,7 @@
 
 <p>If a dropdown is displayed in a non-expanded navbar, they will display ‘inline’ with the rest of the navbar menu.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar3">
@@ -927,7 +929,7 @@
 
 <p>Place various form controls and components within a navbar with <code class="highlighter-rouge">.form-inline</code>.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
   <form class="form-inline">
     <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search" />
@@ -944,7 +946,7 @@
 
 <p>Align the contents of your inline forms with utilities as needed.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded flex-between">
   <a href="#" class="navbar-brand">Navbar</a>
   <form class="form-inline">
@@ -963,7 +965,7 @@
 
 <p>Input groups work, too:</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
   <form class="form-inline">
     <div class="input-group">
@@ -984,7 +986,7 @@
 
 <p>Various buttons are supported as part of these navbar forms, too. This is also a great reminder that vertical alignment utilities can be used to align different sized elements.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
   <form class="form-inline">
     <button type="button" class="btn btn-outline-success me-0_25">Main button</button>
@@ -1003,7 +1005,7 @@
 
 <p>Add normal text to your navbars with the help of <code class="highlighter-rouge">.navbar-text</code>.  This class adjusts vertical alignment for strings of text.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
     <span class="navbar-text">Navbar text example</span>
 </nav>
@@ -1014,7 +1016,7 @@
 
 <p>Using the utility classes, you can change the alignment and appearance of your navbar text.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded flex-end">
     <span class="navbar-text text-danger">
         Navbar text aligned right
@@ -1029,7 +1031,7 @@
 
 <p>You can also use utility classes to align navbar text to other navbar elements like the brand and navigation.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-expand-lg navbar-light bg-faded flex-between">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar6">
@@ -1269,7 +1271,7 @@
 
 <p>Our <a href="/widgets/collapse/">Collapse widget</a> can also to toggle hidden content elsewhere on the page.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
   <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar" aria-label="Toggle navigation">
     <span aria-hidden="true">&#8801;</span>
@@ -1391,7 +1393,7 @@
 
 <p>Although it’s not required, you can wrap a navbar in a <code class="highlighter-rouge">.container</code> to center it on a page or add one within to only center the contents of a <a href="#placement">fixed or static top navbar</a>.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="container">
   <nav class="navbar navbar-light bg-faded">
     <a href="#" class="navbar-brand">Navbar</a>
@@ -1404,7 +1406,7 @@
   <span class="nt">&lt;/nav&gt;</span>
 <span class="nt">&lt;/div&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
   <div class="container">
     <a href="#" class="navbar-brand">Navbar</a>
@@ -1419,11 +1421,11 @@
 
 <h2 id="placement">Placement</h2>
 
-<p>Navbars are statically placed by default, or use the <a href="/utilities/position/">position utilities</a> to alter their location.</p>
+<p>Use our <a href="/utilities/position/">position utilities</a> to place navbars in non-static positions. Choose from fixed to the top, fixed to the bottom, or stickied to the top (scrolls with the page until it reaches the top, then stays there). Fixed navbars use <code class="highlighter-rouge">position: fixed</code>, meaning they’re pulled from the normal flow of the DOM and may require custom CSS (e.g., <code class="highlighter-rouge">padding-top</code> on the <code class="highlighter-rouge">&lt;body&gt;</code>) to prevent overlap with other elements.</p>
 
-<p><strong>Note: <code class="highlighter-rouge">position: sticky</code>, used for <code class="highlighter-rouge">.sticky-top</code>, <a href="http://caniuse.com/#feat=css-sticky">isn’t fully supported in every browser</a>.</strong></p>
+<p><strong>Note: <code class="highlighter-rouge">position: sticky</code>, used for <code class="highlighter-rouge">.sticky-top</code>, <a href="https://caniuse.com/#feat=css-sticky">isn’t fully supported in every browser</a>.</strong></p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded">
   <a href="#" class="navbar-brand">Static default</a>
 </nav>
@@ -1432,7 +1434,7 @@
   <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"navbar-brand"</span><span class="nt">&gt;</span>Static default<span class="nt">&lt;/a&gt;</span>
 <span class="nt">&lt;/nav&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded fixed-top">
   <a href="#" class="navbar-brand">Fixed top</a>
 </nav>
@@ -1441,7 +1443,7 @@
   <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"navbar-brand"</span><span class="nt">&gt;</span>Fixed top<span class="nt">&lt;/a&gt;</span>
 <span class="nt">&lt;/nav&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded fixed-bottom">
   <a href="#" class="navbar-brand">Fixed bottom</a>
 </nav>
@@ -1450,7 +1452,7 @@
   <span class="nt">&lt;a</span> <span class="na">href=</span><span class="s">"#"</span> <span class="na">class=</span><span class="s">"navbar-brand"</span><span class="nt">&gt;</span>Fixed bottom<span class="nt">&lt;/a&gt;</span>
 <span class="nt">&lt;/nav&gt;</span></code></pre></div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <nav class="navbar navbar-light bg-faded sticky-top">
   <a href="#" class="navbar-brand">Sticky top</a>
 </nav>
@@ -1471,7 +1473,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -1480,7 +1482,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -1496,7 +1498,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -1506,7 +1508,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
