--- a/components/switch/index.html
+++ b/components/switch/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -415,7 +417,7 @@
 
 <h2 id="checkboxes">Checkboxes</h2>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <label class="switch">
     <input type="checkbox" class="switch-input" />
     <span class="switch-description">Off</span>
@@ -432,7 +434,7 @@
 
 <h2 id="radios">Radios</h2>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="form-group">
     <label class="switch">
         <input type="radio" class="switch-input" name="radioEx0" checked="" />
@@ -467,7 +469,7 @@
 
 <p>Reverse the direction that the toggle switch moves by using <code class="highlighter-rouge">.switch-reverse</code> modifier class.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <label class="switch switch-reverse">
     <input type="checkbox" class="switch-input" />
     <span class="switch-description">On</span>
@@ -486,7 +488,7 @@
 
 <p>Use the <code class="highlighter-rouge">.switch-rounded</code> modifier class to make switches more rounded.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <label class="switch switch-rounded">
     <input type="checkbox" class="switch-input" />
     <span class="switch-description">Off</span>
@@ -505,7 +507,7 @@
 
 <p>Switches can also be disabled. Add the <code class="highlighter-rouge">disabled</code> boolean attribute to the <code class="highlighter-rouge">&lt;input&gt;</code> and the custom control and label descriptions will be automatically styled.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <label class="switch me-1">
     <input type="checkbox" class="switch-input" disabled="" />
     <span class="switch-control"></span>
@@ -532,7 +534,7 @@
 
 <p>Want a smaller or larger switch?  Add <code class="highlighter-rouge">.switch-xs</code>, <code class="highlighter-rouge">.switch-sm</code>, <code class="highlighter-rouge">.switch-lg</code>, or <code class="highlighter-rouge">.switch-xl</code> for additional sizes.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <label class="switch switch-xs me-1">
     <input type="checkbox" class="switch-input" />
     <span class="switch-control"></span>
@@ -587,7 +589,7 @@
 
 <p>Sizing also works for rounded switches.</p>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <label class="switch switch-rounded switch-xs me-1">
     <input type="checkbox" class="switch-input" />
     <span class="switch-control"></span>
@@ -650,7 +652,7 @@
 <p>Please refer to the <a href="/get-started/accessibility/#conveying-meaning-with-color">Accessiblity notes about conveying meaning with color</a>.</p>
 </div>
 
-<div class="cf-example" data-example-id="">
+<div class="cf-example">
 <div class="form-group">
     <label class="switch">
         <input type="checkbox" class="switch-input" />
@@ -762,7 +764,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -771,7 +773,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -787,7 +789,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -797,7 +799,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
