--- a/layout/flexbox/index.html
+++ b/layout/flexbox/index.html
@@ -23,7 +23,7 @@
 
 <!-- Algolia DocSearch CSS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 
 
 <!-- Docs CSS -->
@@ -53,6 +53,7 @@
 <!-- IE emulation mode warning -->
 <script src="/assets/js/ie-emulation-modes-warning.js"></script>
 
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -61,6 +62,7 @@
   ga('create', 'UA-9130143-15', 'auto');
   ga('send', 'pageview');
 </script>
+
 
 </head>
 <body>
@@ -273,7 +275,8 @@
 <p>Flexbox support is available for a number of Figuration’s components:</p>
 
 <ul>
-  <li><a href="/layout/grid/#flexbox">Grid Layout</a></li>
+  <li><a href="/layout/grid/">Grid Layout</a></li>
+  <li><a href="/components/breadcrumb/">Breadcrumb</a></li>
   <li><a href="/components/button-group/">Button Group</a></li>
   <li><a href="/components/button-group/#button-toolbar">Button Toolbar</a></li>
   <li><a href="/components/cards/#card-decks">Card Deck</a></li>
@@ -292,6 +295,8 @@
 
 <p>Vendor prefixes are provided in our compiled CSS with <a href="https://github.com/postcss/autoprefixer">Autoprefixer</a> via Grunt. Some bugs in IE10-11’s Flexbox implementation are worked around via <a href="https://github.com/luisrudge/postcss-flexbugs-fixes">postcss-flexbugs-fixes</a>.</p>
 
+<p>If you need a reference for working with flexbox, there is an excellent resource over at CSS Tricks with <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">A Complete Guide to Flexbox</a>.</p>
+
 <h2 id="why-flexbox">Why Flexbox?</h2>
 
 <p>In a nutshell, flexbox provides simpler and more flexible layout options in CSS. More specifically, it provides:</p>
@@ -308,7 +313,7 @@
 
 <p>Using flexbox means <strong>reduced browser and device support</strong>, but mostly for older technology.</p>
 
-<p>Visit <a href="http://caniuse.com/#feat=flexbox">Can I use…</a> for details on browser support of flexbox.</p>
+<p>Visit <a href="https://caniuse.com/#feat=flexbox">Can I use…</a> for details on browser support of flexbox.</p>
 
 <p>There are also a number of browser bugs and cross-browser issues with flexbox.  Some of which do not have possible workarounds, while there are other that do.  Check out the <a href="https://github.com/philipwalton/flexbugs">Flexbugs</a> repository for additional information.</p>
 
@@ -325,7 +330,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.1
+            Current version: 3.0.2
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
@@ -334,7 +339,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org/">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2017 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
@@ -350,7 +355,7 @@
                 <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
-                <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
+                <span class="h6 partner-title"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
                 <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
             </div>
         </div>
@@ -360,7 +365,7 @@
 
 
     
-    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
 docsearch({
     apiKey: '3b9b6e000775400f4833a14c4daa6049',
